[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "opengov-tunnelengineering"
version = "0.1.0"
description = "OpenGov-TunnelEngineering: Screening toolkit for tunnel planning/engineering (CA/IN/OH)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Nik Jois", email = "nikjois@llamasearch.ai" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "typer>=0.12.3",
    "rich>=13.7.1",
]

[project.scripts]
opengov-forensics = "open_gov_forensics.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/open_gov_forensics"]

[tool.hatch.envs.default]
dependencies = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.9",
    "mypy>=1.11.2",
]

[tool.hatch.envs.default.scripts]
test = "pytest -q"
cov = "pytest --cov=open_gov_tunnel --cov-report=term-missing"
lint = "ruff check ."
format = "ruff format ."
typecheck = "mypy src"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_optional = true
check_untyped_defs = true
ignore_missing_imports = true
